Fixed synergy on weapon change. More robust handling on querySelector results.

--- a/css/deck_builder.css
+++ b/css/deck_builder.css
@@ -861,3 +861,14 @@ button.menu:hover {
 #search_results:empty {
     display: none;
 }
+
+#legend_div {
+    width: 10rem;
+    padding: 0.5rem;
+}
+
+.legend {
+    padding: 0.5rem;
+    text-align: center;
+    border: solid thin white;
+}
